test_cases/pass/p24.lxr
SCRIPT AREA
START SCRIPT
DECLARE BOOL b
b="TRUE"
IF (NOT NOT b)
START IF
    PRINT: "still true"
END IF
END SCRIPT
