test_cases/fail/f01.lxr
SCRIPT AREA
START SCRIPT
DECLARE BOOL b
b="true"
PRINT: b
END SCRIPT
